Add and style featured document.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme.less
@@ -47,14 +47,16 @@
 @import "Theme/Less/_upcoming-events.less";
 @import "Theme/Less/_latest-news.less";
 @import "Theme/Less/_green-about.less";
+@import "Theme/Less/_featured-document.less";
 @import "Theme/Less/_lcc-spotlight.less";
 @import "Theme/Less/_compelling-link.less";     
 @import "Theme/Less/_social-networking.less";  
 @import "Theme/Less/_orange-feature.less"; 
 @import "Theme/Less/_super-links.less";     
-@import "Theme/Less/_widget-footer-menu.less";      
+@import "Theme/Less/_footer-menu.less";
+@import "Theme/Less/_footer-about.less";
 @import "Theme/Less/_datetime.less";
 @import "Theme/Less/_search-form.less";                   
 @import "Theme/Less/_section-menu.less";    
 @import "Theme/Less/_misc.less";                                            
-@import "Theme/Less/_text.less";
+@import "Theme/Less/_text.less"; 
