--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/BadgeOfHonor.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/BadgeOfHonor.cshtml
@@ -1,4 +1,6 @@
-﻿<ul class="list-unstyled">
-    <li>Design: Allego Design</li>
-    <li>Development: EnviroIssues</li>
-</ul>
+﻿<div class="badge-of-honor">
+    <ul class="list-unstyled">
+        <li>Design: Allego Design</li>
+        <li>Development: EnviroIssues</li>
+    </ul>
+</div>
