--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionWidgetWorkItemCarousel.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionWidgetWorkItemCarousel.cshtml
@@ -57,7 +57,7 @@
 <div id="@carouselUniqueId" class="carousel slide" data-ride="carousel">
 
     @* Note: We may tweak the indicator width and item width in CSS. *@
-    @*@Display.CarouselIndicators(CarouselItems: items, CarouselId: carouselUniqueId, IndicatorWidth: 200)*@
-    @*@Display.CarouselInner(CarouselItems: items, CarouselId: carouselUniqueId, ItemWidth: 735)*@
+    @Display.CarouselIndicators(CarouselItems: items, CarouselId: carouselUniqueId, IndicatorWidth: 200)
+    @Display.CarouselInner(CarouselItems: items, CarouselId: carouselUniqueId, ItemWidth: 735)
 
 </div>
