--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_featured-document.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_featured-document.less
@@ -1,7 +1,7 @@
 ﻿.widget-featured-document {
 
     figure {
-        margin-top: 40px;
+        margin: 18px 0;
         padding: 5px;
         background-color: lighten(@orange-lcc, 30%);
         border: thin solid @orange-lcc;
