--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/SectionMenuItem.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/SectionMenuItem.cshtml
@@ -3,7 +3,7 @@
 @using Orchard.UI.Navigation;
 
 @{
-    var item = Model.MenuItem.Item as MenuItem;
+    var item = Model.MenuItem as MenuItem;
     
     // Use the href as the link text,
     // if it's the top level menu item,
