--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/SectionMenuItemChildren.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/SectionMenuItemChildren.cshtml
@@ -7,7 +7,7 @@
     if (hasChildren)
     {
         var childMenuItems = Enumerable.Cast<dynamic>(Model.MenuItem.Items);
-        for (var i = 0; i < childMenuItems.Count; ++i)
+        for (var i = 0; i < childMenuItems.Length; ++i)
         {
             var childMenuItem = childMenuItems[i];
             if (childMenuItem.Content is TermPart)
