Let content menu items be top level drop down items.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/MenuItem.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/MenuItem.cshtml
@@ -18,6 +18,9 @@
         if (items.Any())
         {
             Model.Classes.Add("dropdown");
+            // for bootstrap and/or font-awesome            
+            Model.BootstrapAttributes = "data-toggle='dropdown'";
+            Model.BootstrapIcon = "<span class='caret'></span>";
         }
 
         @* morphing the shape to keep Model untouched*@
