Update carousel to link to taxonomy terms not work items.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/CarouselInner.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/CarouselInner.cshtml
@@ -11,7 +11,7 @@
             <div class="carousel-caption">
                 <h3><a href="@item.WorkArea.Slug">@item.WorkArea.Term</a></h3>
                 @Html.Raw(item.WorkItem.Summary)
-                <a href="@item.WorkItem.Slug">Learn More</a>
+                <a href="@item.WorkArea.Slug">Learn More</a>
             </div>
         </div>
     }
