--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/Parts/MenuWidget-SectionMenu.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/Parts/MenuWidget-SectionMenu.cshtml
@@ -13,6 +13,9 @@
             // process child items first
             SetMenuItemsAsSelected(menuItem.Items, currentUrl);
 
+            // TODO Handle taxonomy terms
+            // TODO Handle content items that have a taxonomy term (e.g. work items)
+            
             // then process current item
             var menuItemUrl = menuItem.Href;
             menuItem.Selected =
@@ -37,7 +40,7 @@
     var menuItems = shapeItems.Select<dynamic, MenuItem>(i => i.Item);
 
     // for pages that are not in the main menu
-    // check whether a parent is selected or not
+    // check whether a parent is selected or not          
     SetMenuItemsAsSelected(menuItems, HttpContext.Current.Request.Url.AbsoluteUri);
 
     // get the first, selected, top level item
