Add comments about taxonomies.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/Parts/MenuWidget-SectionMenu.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/Parts/MenuWidget-SectionMenu.cshtml
@@ -14,7 +14,7 @@
             SetMenuItemsAsSelected(menuItem.Items, currentUrl);
 
             // TODO Handle taxonomy terms
-            // TODO Handle content items that have a taxonomy term (e.g. work items)
+            // TODO Handle content items that have a taxonomy term (e.g. work items, lccs, resources)
             
             // then process current item
             var menuItemUrl = menuItem.Href;
