Hard code carousel image height and width in less.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_workitem-carousel.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_workitem-carousel.less
@@ -17,6 +17,11 @@
             overflow: hidden;
             background-color: none;
             height: auto;
+
+            img {
+                width: 132px;
+                height: 68px;
+            }
         }
     }
 
@@ -106,8 +111,8 @@
                 margin-top: @carousel-base-padding;
                 width: auto;
 
-                img {                    
-                    .box-sizing(border-box);                    
+                img {
+                    .box-sizing(border-box);
                     width: @carousel-indicator-width;
                 }
             }
