--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Widget-MenuWidget.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_1_1_Base/Views/Widget-MenuWidget.cshtml
@@ -7,18 +7,22 @@
     }
 }
 
-<div class="container-fluid">
+<nav class="navbar navbar-default">
 
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#@collapseId">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/"><span>@WorkContext.CurrentSite.SiteName</span></a>
+    <div class="container-fluid">
+
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#@collapseId">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/"><span>@WorkContext.CurrentSite.SiteName</span></a>
+        </div>
+
+        @Display(Model.Content)
+
     </div>
 
-    @Display(Model.Content)
-
-</div>
+</nav>
