--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Styles/Bootstrap/less/bootstrap.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Styles/Bootstrap/less/bootstrap.less
@@ -1,15 +1,16 @@
 // Core variables and mixins
 @import "variables.less";
-@import "mixins.less"; 
+@import "mixins.less";
 
-// Reset
+// Reset and dependencies
 @import "normalize.less";
 @import "print.less";
+@import "glyphicons.less";
 
 // Core CSS
 @import "scaffolding.less";
 @import "type.less";
-@import "code.less"; 
+@import "code.less";
 @import "grid.less";
 @import "tables.less";
 @import "forms.less";
@@ -17,7 +18,6 @@
 
 // Components
 @import "component-animations.less";
-@import "glyphicons.less";
 @import "dropdowns.less";
 @import "button-groups.less";
 @import "input-groups.less";
@@ -35,6 +35,7 @@
 @import "media.less";
 @import "list-group.less";
 @import "panels.less";
+@import "responsive-embed.less";
 @import "wells.less";
 @import "close.less";
 
