--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Styles/Bootstrap/less/bootstrap.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Styles/Bootstrap/less/bootstrap.less
@@ -1,5 +1,5 @@
-// Core variables and mixins
-@import "variables.less";
+﻿// Core variables and mixins
+@import "variables.less"; 
 @import "mixins.less";
 
 // Reset and dependencies
@@ -48,3 +48,5 @@
 // Utility classes
 @import "utilities.less";
 @import "responsive-utilities.less";
+  
+ 
