Use chevron down for drop downs.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Views/MenuItem.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/Bootstrap_3_2_0_Base/Views/MenuItem.cshtml
@@ -20,7 +20,7 @@
             Model.Classes.Add("dropdown");
             // for bootstrap and/or font-awesome            
             Model.BootstrapAttributes = "data-toggle='dropdown'";
-            Model.BootstrapIcon = "<span class='glyphicon glyphicon-hand-down'></span>";
+            Model.BootstrapIcon = "<span class='glyphicon glyphicon-chevron-down'></span>";
         }
 
         @* morphing the shape to keep Model untouched*@
