--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageAnnualReports.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Views/ProjectionPageAnnualReports.cshtml
@@ -6,7 +6,7 @@
 
 @helper Header(string lcc)
 {
-    <h2 data-toggle="collapse" data-target="#@lcc.HtmlClassify()">@lcc</h2>
+    <h2 class="dpdn" data-toggle="collapse" data-target="#@lcc.HtmlClassify()">@lcc</h2>
 }
 
 @helper OpenList(string lcc)
