--- a/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_content-item.less
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Themes/LccNetwork.Bootstrap/Styles/Theme/Less/_content-item.less
@@ -15,4 +15,18 @@
         {
 
     }
+    ul.content-items{
+        padding-left: 0;
+        list-style-type:none;
+    }
+    h2{
+        text-transform: uppercase;
+        color:black;
+        font-weight:bold;
+    }
+    .media-thumbnail-image {
+        img{
+            margin-bottom: 10px;
+        }
+    }
 }
