Remove bad semicolon.

--- a/Orchard.Source.1.8.1/src/Orchard.Web/Modules/_Backup/BigFont.Maps/Views/EditorTemplates/Parts/BigFontMap_MultipleMarkers.cshtml
+++ b/Orchard.Source.1.8.1/src/Orchard.Web/Modules/_Backup/BigFont.Maps/Views/EditorTemplates/Parts/BigFontMap_MultipleMarkers.cshtml
@@ -1,4 +1,4 @@
-﻿@model BigFont.Maps.Models.BigFontMap_MultipleMarkersPart
+﻿@model BigFont.Maps.Models.BigFontMap_MultipleMarkersPart;
 
 <fieldset>
   <legend>Map Fields</legend>
