--- a/src/Orchard.Web/Themes/Bootstrap_3_2_0_SimpleBlog/Views/Layout.cshtml
+++ b/src/Orchard.Web/Themes/Bootstrap_3_2_0_SimpleBlog/Views/Layout.cshtml
@@ -1,4 +1,4 @@
-@functions {
+﻿@functions {
     // To support the layout classifaction below. Implementing as a razor function because we can, could otherwise be a Func<string[], string, string> in the code block following.
     string CalcuClassify(string[] zoneNames, string classNamePrefix)
     {
@@ -24,7 +24,13 @@
     ***************************************************************/
 
     Script.Require("ShapesBase");
-    Script.Require("APA-Style"); // optional
+
+
+    @*
+        // optional script
+        Script.Require("APA-Style"); 
+    *@
+
     Script.Require("IE-10");
     Script.Require("html5shiv").AtHead().UseCondition("lt ie 9");
     Script.Require("respondJS").AtHead().UseCondition("lt ie 9");
@@ -209,18 +215,6 @@
         </div>            
         @if (Model.Footer != null)
         {
-@*
-
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- AD_SENSE_02_Responsive -->
-      <ins class="adsbygoogle ad-sense-02-responsive"
-          data-ad-client="ca-pub-6542429488011130"
-          data-ad-slot="9782767204"></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script> 
-      
-*@
             <div id="footer-sig" class="group">                                         
                 @Zone(Model.Footer)
             </div>
