--- a/src/Orchard.Web/Themes/Bootstrap_3_3_4_Base/Views/Layout.cshtml
+++ b/src/Orchard.Web/Themes/Bootstrap_3_3_4_Base/Views/Layout.cshtml
@@ -12,7 +12,9 @@
 
     SetMeta(httpEquiv: "X-UA-Compatible", content: "IE=edge,chrome=1");
     Style.Include("//fonts.googleapis.com/css?family=Lobster&subset=latin");
-    Style.Include("app.css");
+    Style.Include("base.css");
+    Style.Include("theme.css");
+    Script.Include("base.js");
 
     /* Some useful shortcuts or settings
     ***************************************************************/
@@ -49,7 +51,7 @@
 
     /* Last bit of code to prep the layout wrapper
     ***************************************************************/
-    
+
     Model.Id = "layout-wrapper";
     var tag = Tag(Model, "div"); // using Tag so the layout div gets the classes, id and other attributes added to the Model
 }
