Add a theme.js file.

--- a/src/Orchard.Web/Themes/Bootstrap_3_3_4_Base/Views/Layout.cshtml
+++ b/src/Orchard.Web/Themes/Bootstrap_3_3_4_Base/Views/Layout.cshtml
@@ -15,6 +15,7 @@
     Style.Include("base.css");
     Style.Include("theme.css");
     Script.Include("base.js");
+    Script.Include("theme.js");
 
     /* Some useful shortcuts or settings
     ***************************************************************/
