--- a/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/Styles/simple-blog.less
+++ b/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/Styles/simple-blog.less
@@ -12,6 +12,10 @@
     padding: 20px 0;
 }
 
+#layout-footer {
+    border-top: thin solid gray;
+}
+
 #layout-main-container {
     border-left: 0;
     border-right: 0;
