--- a/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/app_components/simple-blog.less
+++ b/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/app_components/simple-blog.less
@@ -52,9 +52,13 @@ ul.content-items {
 
 code,
 pre {
-    background: white;
-    color: green;
-    font-size: 20px;
+	font-size:20px;
+	max-width:100%;
+	display:block;
+	overflow: scroll;
+	background:black;
+	color:yellow;
+	margin-bottom:2px;
 }
 
 img,
